<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:foregroundTint="#FFFFFF"
    android:orientation="vertical"
    android:tag="TournamentFragment"
    tools:context=".TournamentFragment">


    <TextView
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/white"
        android:text="@string/selectSound" />

    <RadioGroup
        android:id="@+id/soundSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/sineSound"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/custom_btn_radio"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:text="@string/sine"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/shistleSound"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="10dp"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/custom_btn_radio"

            android:gravity="center_vertical"

            android:text="@string/whistle"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>
</LinearLayout>