<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment" >

    <TextView
        android:id="@+id/editTextText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/title1Text"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/title2Text"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="50sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:foreground="@drawable/target_timer_logo"/>

    <TextView
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/sloganText"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="40sp" />
    <TextView
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="BSV Eppinghoven"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="1743 e.V."
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="20sp" />



</LinearLayout>